Fix navigation height on mobile menu

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -439,6 +439,7 @@ p {
   top: 0;
   bottom: 0;
   right: 0;
+  height: 100vh;
   z-index: 1;
   color: #fff;
   display: flex;
